     still exists but has been deprecated)
    -Deprecated some methods whose visibility will be decreased (e.g. from public
     to protected)
    -MorfologikSpellerRule.getRuleMatch(String, int) has been renamed to
     MorfologikSpellerRule.getRuleMatches(String, int)
    -The RuleMatch constructor now throws an exception if toPosition is not
     larger than fromPosition

-Command line:
    -Enabling and disabling specific rules at the same time is now allowed.
     In order to test only some rules (disabling all the rest), which previously was done
     with "--enable LIST_OF_RULES", now use "--enabledonly --enable LIST_OF_RULES" 
     (or "-eo -e LIST_OF_RULES").

-Embedded server:
    -Two new options can be set in the properties file to make LanguageTool
     return the same XML format as After the Deadline (AtD). This way it can be used
     as a drop-in replacement for AtD:
     * mode - 'LanguageTool' or 'AfterTheDeadline'
     * afterTheDeadlineLanguage - code of default language if mode is set to 'AfterTheDeadline'
     NOTE: the 'AfterTheDeadline' mode should be considered experimental for now.
    -The new option 'maxCheckThreads' allows setting the maximum number of threads working
     on requests in parallel. The default is 10, as it used to be.

-Internals:
    -New abstract rule AbstractDateCheckFilter that allows to check if a week day and date
     match. For example "Tuesday, September 29, 2014" could be detected, as September 29, 2014 is
     not actually a Tuesday. This uses the new RuleFilter interface that can be called
     from XML with the new 'filter' element. 'filter' takes these attributes:
       'class': the fully-qualified name of a Java class that implements RuleFilter, e.g.
                "org.languagetool.rules.de.DateCheckFilter"
       'args':  a string like "year:\1 month:\2 day:\3 weekDay:\4", i.e. a space-separated list of
                key/value pairs, where \x gets resolved to the pattern's token value (as in