@@ -78,6 +78,8 @@ LanguageTool Change Log
      MorfologikSpellerRule.getRuleMatches(String, int)
     -The RuleMatch constructor now throws an exception if toPosition is not
      larger than fromPosition
+    -The JLanguageTool and MultiThreadedJLanguageTool constructors don't declare to
+     throw an IOException anymore
 
 -Command line:
     -Enabling and disabling specific rules at the same time is now allowed.
